# google-search-with-gemini

./: .gitignore  README.md  api.json  pyproject.toml
src/gemini_grounding/: __init__.py  cli.py  core.py  py.typed
tests/: test_smoke.py
